<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <include
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/header_main"/>


    <include
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/footer"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_above="@+id/footer">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <LinearLayout
                android:id="@+id/ll_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/logo"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_header"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="26dp"
                android:layout_marginRight="26dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_userid"
                    android:visibility="visible"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_id"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:layout_marginTop="2dp"
                        android:id="@+id/et_userid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textboxshape"
                        android:hint="@string/hint_user_id"
                        android:padding="10dp"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textColor="#222222"
                        android:textSize="13sp"
                        android:autofillHints="username" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_mob"
                    android:layout_weight="1"
                    android:visibility="visible"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_number"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:layout_marginTop="2dp"
                        android:id="@+id/et_mob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textboxshape"
                        android:hint="@string/enter_registered_mobile_number"
                        android:padding="10dp"
                        android:maxLength="10"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="#222222"
                        android:textSize="13sp"
                        android:autofillHints="phone" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_get_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="32dp"
                    android:background="@drawable/buttonshape"
                    android:text="@string/get_password"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:textAllCaps="false"/>

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
